--- a/admaker/components/Navbar.module.css
+++ b/admaker/components/Navbar.module.css
@@ -193,7 +193,7 @@
     }
 
     .logo {
-        margin-left: 0;
+        margin-left: -16px;
         padding-left: 0;
     }
 
